# NSU-labs

./: README.md
2nd-year/c-labs/lab0/: CMakeLists.txt  main.cpp
2nd-year/c-labs/lab1/: CMakeLists.txt  main.cpp  tests.cpp  tritset.cpp  tritset.h
